Separate Spazer and Plasma beams, and give Plasma its green colour

--- a/Todo.txt
+++ b/Todo.txt
@@ -11,7 +11,7 @@ TODO CHANGES:
 	* (DONE) Change Missile Doors requirement from 5 to 1 (Located in Bank 02, Line 7631)
 	* (DONE)  Change small energy amount from 5 to 10 (Located in Bank 02, Line 469)
 	* Change Bomb timings (Possibly implement some pseudo IBJ)
-	* Change Plasma Beam colour to green. This would probably require splitting both Spazer and Plasma into two graphics and colouring the Plasma one green
+	* (DONE) Change Plasma Beam colour to green. This would probably require splitting both Spazer and Plasma into two graphics and colouring the Plasma one green (Changes made in bank_000.asm line 9788, bank_006.asm lines 15 and 49, build.py line 12 and Makefile line 16)
 	* Make it so Space Jump can be triggered again even if Samus returns to her upright stance, or if the next input for the next jump failed (to avoid having to fall all the way down before being able to re-enable Space Jump)
 	* Make all frozen enemies blue (some get turned to purple when hit with the Ice Beam, this is particularly noticeable when there's enemies with two different palettes and they get frozen)
 	* Add Health and Missiles refills to the Omega Nest
